chore: updated the onboard email template

--- a/src/modules/email/templates/onboard.hbs
+++ b/src/modules/email/templates/onboard.hbs
@@ -118,11 +118,11 @@
                 valign="top">
                 <p
                   style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
-                  Hi {{firstName}}</p>
+                  Hi {{firstName}},</p>
                 <p
                   style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
-                  You onboarding process into consize was initiated by one of our customer care representatives. Click
-                  the link below to complete your onboarding process. </p>
+                  Your organization has been created on Consize. Click the button below to complete your onboarding
+                  process </p>
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
                   style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; box-sizing: border-box; width: 100%; min-width: 100%;"
                   width="100%">
@@ -148,13 +148,6 @@
             </tr>
             </tbody>
           </table>
-          <p
-            style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
-            This is a really simple email template. It's sole purpose is to get the recipient to click the button
-            with no distractions.</p>
-          <p
-            style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
-            Good luck! Hope it works.</p>
       </td>
     </tr>
 
